# Ark

./: .gitignore  AGENTS.md  AGNETS.md  Makefile  README.md  README.zh-CN.md  environment.txt  main.py  pyproject.toml  requirements.txt
.github/workflows/: package.yml
.progress/: PROGRESS.md
ark/: __init__.py  cli.py  models.py  runtime_logging.py
ark/ai/: batcher.py  decision_client.py  google_oauth.py  router.py
ark/backup/: __init__.py  executor.py
ark/collector/: scanner.py
ark/decision/: __init__.py  tiering.py
ark/pipeline/: config.py  run_backup.py
ark/rules/: __init__.py  baseline.ignore  local_rules.py
ark/state/: backup_run_store.py  base.py  config_store.py  json_store.py  sqlite_store.py
ark/tui/: __init__.py  llm_catalog.py  main_menu.py  stage1_review.py  stage3_review.py
docs/: architecture.md  architecture.zh-CN.md  git-flow.md  google-oauth-setup.md  google-oauth-setup.zh-CN.md  privacy-boundary.md  superpowers-overrides.md
docs/plans/: 2026-02-28-ark-backup-agent.md  2026-02-28-ark-tui-first-entry-design.md  2026-02-28-ark-tui-first-entry-implementation.md  2026-02-28-llm-logging-stage3-single-line-plan.md  2026-02-28-pipeline-gap-closure.md  2026-02-28-stage1-stage3-ai-dfs-plan.md  2026-02-28-tree-paging-ai-selection.md  (+8 more)
scripts/: verify.sh
src/: cli.py  runtime_logging.py  runtime_paths.py
tests/: test_agnets_md_exists.py  test_cli_smoke.py  test_local_skills_location.py  test_package_workflow_exists.py  test_readme_contains_privacy_boundary.py  test_runtime_logging.py  test_runtime_paths.py  test_verify_script_exists.py
(+53 files in other folders)
